@@ -48,6 +48,9 @@
 
 			#ifnotnull $minimum_size
 			@{ this->SetMinSize( $minimum_size ); #nl @}
+			
+			#ifnotnull $maximum_size
+			@{ this->SetMaxSize( $maximum_size ); #nl @}
 
 			#ifnotnull $center
 			@{ this->Centre( $center ); #nl @}
@@ -98,6 +101,9 @@
 
 			#ifnotnull $minimum_size
 			@{ this->SetMinSize( $minimum_size ); #nl @}
+			
+			#ifnotnull $maximum_size
+			@{ this->SetMaxSize( $maximum_size ); #nl @}
 		</template>
 	</templates>
 
@@ -148,6 +154,9 @@
 
 			#ifnotnull $minimum_size
 			@{ this->SetMinSize( $minimum_size ); #nl @}
+			
+			#ifnotnull $maximum_size
+			@{ this->SetMaxSize( $maximum_size ); #nl @}
 
 			#ifnotnull $center
 			@{ this->Centre( $center ); #nl @}
